# banking-app

./: .editorconfig  .gitignore  data.db  data.db-shm  data.db-wal  eslint.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: ci.yml  code-quality.yml
migrations/: 20250904160536_init_database.sql
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_add_account_type.sql  0002_add_categories.sql  0003_add_accounts.sql  0004_add_transactions.sql  0005_drop_to_account_field.sql  20250904160536_init_database.sql
src-tauri/queries/: add_category.sql  add_new_transaction.sql  add_transaction.sql  create_account.sql  get_account_types.sql  get_accounts.sql  get_all_transactions.sql  get_transaction.sql  get_transactions.sql
src-tauri/src/: cmd.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  transactions.rs
src-tauri/src/service/: account.rs  mod.rs  transactions.rs
src-tauri/tests/: account.rs  transactions.rs
src/components/: AccountsCard.svelte  AddTransaction.svelte  CreateAccount.svelte  Dialog.svelte  Drawer.svelte  Select.svelte  TextField.svelte  TransactionsCard.svelte
src/components/activity-bar/: ActivityBar.svelte  Categories.svelte
src/lib/: account.svelte.ts  db.ts
src/routes/: +layout.svelte  +page.svelte
src/styles/: app.css  button.css  colors.css  shadow.css  text.css
src/tests/: account.svelte.test.ts
