[package]
name = "banking-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["wakunguma kalimukwa <wakunguma13@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "banking_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = {version="0.4.41",features = ["serde"] }
uuid = {version = "1.0",features = ["v4", "serde"] }
tokio = {version="1.47.1",features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"


[dependencies.sqlx]
version = "0.8.6"
features = ["uuid", "chrono", "derive", "runtime-tokio", "sqlite", "migrate",]
